--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": 
-  "name": "spaReactRoutin",
+  "homepage": "https://andrzejgrzegorzewski.github.io/spaReactRouter/",
+  "name": "spaReactRouter",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,6 +10,8 @@
     "react-scripts": "2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
